minimal bug fixes on mobile emulation

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,11 @@
+body {
+    position: relative;
+}
+
 #root {
+    overflow: hidden;
     width: 100vw;
     height: 100vh;
-    overflow: hidden;
     background: white;
 }
 
